# proxy-wasm-rust-filter-echo

./: .bazelrc  .gitattributes  BUILD  Cargo.toml  Makefile  README.md  WORKSPACE
bazel/cargo/: BUILD.bazel  crates.bzl
bazel/cargo/remote/: BUILD.bytes-1.0.1.bazel  BUILD.chrono-0.4.19.bazel  BUILD.fnv-1.0.7.bazel  BUILD.http-0.2.3.bazel  BUILD.http-0.2.4.bazel  BUILD.itoa-0.4.7.bazel  BUILD.libc-0.2.92.bazel  BUILD.libc-0.2.93.bazel  BUILD.proc-macro2-1.0.26.bazel  BUILD.proxy-wasm-0.1.3.bazel  BUILD.quote-1.0.9.bazel  BUILD.ryu-1.0.5.bazel  BUILD.serde-1.0.125.bazel  BUILD.serde-tuple-vec-map-1.0.0.bazel  BUILD.serde_derive-1.0.125.bazel  BUILD.serde_json-1.0.64.bazel  BUILD.syn-1.0.68.bazel  BUILD.syn-1.0.69.bazel  BUILD.time-0.1.44.bazel  BUILD.unicode-xid-0.2.1.bazel  BUILD.wasi-0.10.0+wasi-snapshot-preview1.bazel
src/: endpoints.rs  lib.rs  util.rs
